--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <ul class="featured-extensions">
                 <li class="featured-extension">
-                    <a href="https://ericrosenbaum.github.io/spotify-extension/">
+                    <a href="http://ericrosenbaum.github.io/spotify-extension/">
                         <img src="images/extensions/spotify_large.png" alt="Spotify" />
                         <section>
                             <h2>Spotify</h2>
@@ -45,7 +45,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="https://llk.github.io/microbit-extension/">
+                    <a href="http://llk.github.io/microbit-extension/">
                         <img src="images/extensions/microbit_small.png" alt="micro:bit" />
                         <section>
                             <h2>micro:bit</h2>
@@ -63,7 +63,7 @@
                     </a>
                 </li>
                 <li class="featured-extension">
-                    <a href="https://khanning.github.io/scratch-arduino-extension/">
+                    <a href="http://khanning.github.io/scratch-arduino-extension/">
                         <img src="images/extensions/arduino_small.png" alt="Arduino" />
                         <section>
                             <h2>Arduino</h2>
@@ -76,7 +76,7 @@
             <div class="bottom-row">
                 <div>
 
-                    <aside class="icon-gears">Most physical extensions require the Scratch Device Plugin - <a href="https://scratch.mit.edu/info/ext_download/">Download here</a></aside>
+                    <aside class="icon-gears">Most physical extensions require the Scratch Device Plugin - <a href="http://scratch.mit.edu/info/ext_download/">Download here</a></aside>
 
                     <a href="#extensions"><button>See all Extensions</button></a>
                 </div>  
@@ -103,7 +103,7 @@
             <div><div>
                 <div>
                     <h2>Who uses ScratchX?</h2>
-                    <p><strong>Anyone</strong> can access and play with Experimental Extensions on ScratchX. Integrate <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">Twitter</a> feeds into your Scratch project, connect with hardware like <a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js" data-action="load-url">Arduino</a> and <a href="?url=https://MrYsLab.github.io/xi4s.js" data-action="load-url">Raspberry Pi</a>, and <a href="#extensions">much much more.</a></p>
+                    <p><strong>Anyone</strong> can access and play with Experimental Extensions on ScratchX. Integrate <a href="?url=http://technoboy10.github.io/twitter/extension.js" data-action="load-url">Twitter</a> feeds into your Scratch project, connect with hardware like <a href="?url=http://khanning.github.io/scratch-arduino-extension/arduino_extension.js" data-action="load-url">Arduino</a> and <a href="?url=http://MrYsLab.github.io/xi4s.js" data-action="load-url">Raspberry Pi</a>, and <a href="#extensions">much much more.</a></p>
 
                     <p><strong>Developers</strong> can use ScratchX to create and test new Experimental Extensions. Learn more about ScratchX in our <a href="https://github.com/LLK/scratchx/wiki/">developer documentation</a></p>
                 </div>
@@ -150,7 +150,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://llk.github.io/arduino-101/arduino101_serial_extension.js" data-action="load-url">
+                        <a href="?url=http://llk.github.io/arduino-101/arduino101_serial_extension.js" data-action="load-url">
                             <header>
                                 <h2>Arduino 101</h2>
                                 <p class="author">Kreg Hanning</p>
@@ -159,7 +159,7 @@
                         </a>
                         <section class="description">
                             <p>Control Arduino/Genuino 101 boards</p>
-                            <a href="?url=https://llk.github.io/arduino-101/examples/Blink.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://llk.github.io/arduino-101/examples/Blink.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://llk.github.io/arduino-101/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -176,7 +176,7 @@
                         </a>
                         <section class="description">
                             <p>Recognize images from your webcam.</p>
-                            <a href="?url=https://eesh.github.io/clarifai-scratch/examples/clarifai_camera.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://eesh.github.io/clarifai-scratch/examples/clarifai_camera.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://eesh.github.io/clarifai-scratch/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -201,7 +201,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://Robotec-CoderZ.github.io/he.js" data-action="load-url">
+                        <a href="?url=http://Robotec-CoderZ.github.io/he.js" data-action="load-url">
                             <header>
                                 <h2>EV3+Scratch (Hebrew Version)</h2>
                                 <p class="author">Robotec Israel</p>
@@ -210,7 +210,7 @@
                         </a>
                         <section class="description">
                             <p>Control LEGO EV3 over USB (Hebrew)</p>
-                            <a href="?url=https://Robotec-CoderZ.github.io/he-example.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://Robotec-CoderZ.github.io/he-example.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://robotec-coderz.github.io/index.html">Documentation</a>
                         </section>
                         <section class="tags">
@@ -235,7 +235,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://adihadas.github.io/ftscratch/src/ext_heb.js" data-action="load-url">
+                        <a href="?url=http://adihadas.github.io/ftscratch/src/ext_heb.js" data-action="load-url">
                             <header>
                                 <h2>Fischertechnik robots</h2>
                                 <p class="author">Fischertechnik Israel</p>
@@ -244,7 +244,7 @@
                         </a>
                         <section class="description">
                             <p>TXT controller programming (Hebrew)</p>
-                            <a href="?url=https://adihadas.github.io/ftscratch/src/Black_Line_Drive.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://adihadas.github.io/ftscratch/src/Black_Line_Drive.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://adihadas.github.io/ftscratch/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -269,7 +269,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://irobotstem.github.io/CreateScratchX/roomba600Extension.js" data-action="load-url"> 
+                        <a href="?url=http://irobotstem.github.io/CreateScratchX/roomba600Extension.js" data-action="load-url"> 
                             <header>
                                 <h2>iRobot&reg; Create&reg; 2</h2>
                                 <p class="author">iRobot</p>
@@ -286,7 +286,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
+                        <a href="?url=http://khanning.github.io/scratch-isstracker-extension/iss_extension.js" data-action="load-url">
                             <header>
                                 <h2>ISS Tracker</h2>
                                 <p class="author">Kreg Hanning</p>
@@ -354,7 +354,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://llk.github.io/microbit-extension/microbit_extension.js" data-action="load-url">
+                        <a href="?url=http://llk.github.io/microbit-extension/microbit_extension.js" data-action="load-url">
                             <header>
                                 <h2>micro:bit</h2>
                                 <p class="author">Kreg Hanning</p>
@@ -363,7 +363,7 @@
                         </a>
                         <section class="description">
                             <p>Control micro:bit over bluetooth</p>
-                            <a href="?url=https://llk.github.io/microbit-extension/examples/Button.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://llk.github.io/microbit-extension/examples/Button.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://llk.github.io/microbit-extension" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -371,7 +371,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://thepocketlab.github.io/ScratchX/pocketlab_extension.js" data-action="load-url">
+                        <a href="?url=http://thepocketlab.github.io/ScratchX/pocketlab_extension.js" data-action="load-url">
 
                             <header>
                                 <h2>PocketLab for Scratch</h2>
@@ -381,7 +381,7 @@
                         </a>
                         <section class="description">
                             <p>Real time PocketLab sensor data!</p>
-                            <a href="?url=https://thepocketlab.github.io/ScratchX/SpaceBlaster.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://thepocketlab.github.io/ScratchX/SpaceBlaster.sbx" data-action="load-url">Sample Project</a>
                             <a href="http://www.thepocketlab.com/support/article/pocketlab-scratch-integration-beta" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -398,7 +398,7 @@
                         </a>
                         <section class="description">
                             <p>Control the Poppy Ergo Jr. robot</p>
-                            <a href="?url=https://eesh.github.io/scratch-test/examples/record_playback.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://eesh.github.io/scratch-test/examples/record_playback.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://eesh.github.io/scratch-test/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -483,7 +483,7 @@
                         </a>
                         <section class="description">
                             <p>Animate and remix millions of songs!</p>
-                            <a href="?url=https://ericrosenbaum.github.io/spotify-extension/examples/dance-party.sbx#scratch" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://ericrosenbaum.github.io/spotify-extension/examples/dance-party.sbx#scratch" data-action="load-url">Sample Project</a>
                             <a href="https://ericrosenbaum.github.io/spotify-extension/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -508,7 +508,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://aseba-community.github.io/thymio-scratchx/thymio_extension.js" data-action="load-url">
+                        <a href="?url=http://aseba-community.github.io/thymio-scratchx/thymio_extension.js" data-action="load-url">
                             <header>
                                 <h2>Thymio</h2>
                                 <p class="author">Mobsya</p>
@@ -517,7 +517,7 @@
                         </a>
                         <section class="description">
                             <p>Control the Thymio robot with Scratch!</p>
-                            <a href="?url=https://aseba-community.github.io/thymio-scratchx/activities/crash_preventing_system_en.sbx&lang=en" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://aseba-community.github.io/thymio-scratchx/activities/crash_preventing_system_en.sbx&lang=en" data-action="load-url">Sample Project</a>
                             <a href="https://aseba-community.github.io/thymio-scratchx/index-en.html" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -525,7 +525,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://technoboy10.github.io/twitter/extension.js" data-action="load-url">
+                        <a href="?url=http://technoboy10.github.io/twitter/extension.js" data-action="load-url">
                             <header>
                                 <h2>Twitter</h2>
                                 <p class="author">Connor Hudson, Kreg Hanning</p>
@@ -576,7 +576,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://khanning.github.io/scratch-weather-extension/weather_extension.js" data-action="load-url">
+                        <a href="?url=http://khanning.github.io/scratch-weather-extension/weather_extension.js" data-action="load-url">
                             <header>
                                 <h2>Weather</h2>
                                 <p class="author">Sayamindu Dasgupta, Kreg Hanning</p>
@@ -585,7 +585,7 @@
                         </a>
                         <section class="description">
                             <p>Access live weather information</p>
-                            <a href="?url=https://khanning.github.io/scratch-weather-extension/examples/WeatherExample.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://khanning.github.io/scratch-weather-extension/examples/WeatherExample.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://khanning.github.io/scratch-weather-extension/" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -593,7 +593,7 @@
                         </section>
                     </li>
                     <li>
-                        <a href="?url=https://MrYsLab.github.io/xi4s.js" data-action="load-url">
+                        <a href="?url=http://MrYsLab.github.io/xi4s.js" data-action="load-url">
                             <header>
                                 <h2>Xi - Multi uC Interconnect</h2>
                                 <p class="author">Alan Yorinks</p>
@@ -602,7 +602,7 @@
                         </a>
                         <section class="description">
                             <p>Control for Arduino, <acronym title="Raspberry Pi">RPi</acronym> and <acronym title="BeagleBone Black">BBB</acronym></p>
-                            <a href="?url=https://MrYsLab.github.io/blink.sbx" data-action="load-url">Sample Project</a>
+                            <a href="?url=http://MrYsLab.github.io/blink.sbx" data-action="load-url">Sample Project</a>
                             <a href="https://github.com/MrYsLab/xi" target="_blank">Documentation</a>
                         </section>
                         <section class="tags">
@@ -741,7 +741,7 @@
                 <ul>
                     <li><a href="https://scratch.mit.edu/">Scratch</a></li>
                     <li><a href="http://scratched.gse.harvard.edu/">ScratchEd</a></li>
-                    <li><a href="http://www.scratchjr.org/">ScratchJr</a></li>
+                    <li><a href="https://www.scratchjr.org/">ScratchJr</a></li>
                     <li><a href="https://scratch.mit.edu/conference/">Scratch Conference</a></li>
                     <li><a href="http://day.scratch.mit.edu/">Scratch Day</a></li>
                     <li><a href="http://scratchfoundation.org/">Scratch Foundation</a></li>
